# farms_mujoco

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MANIFEST.in  README.md  install.py  install.sh  phase_diff.py  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
doc/source/: conf.py  index.rst
ducks/: conf.py  index.rst
ducks/reference/: index.rst
farms_bullet/: __init__.py  arenas.py  camera.py  control.py  cy_animat_data.pxd  cy_animat_data.pyx  cy_controller.pxd  cy_controller.pyx  interface.py  logging.py  model.py  model_options.py  network.py  parse_args.py  sensors.py  simulation.py  simulation_options.py  simulator.py
farms_bullet/animats/: __init__.py  animat.py  animat_data.pxd  animat_data.py  animat_data.pyx  animat_data_cy.pxd  animat_data_cy.pyx  array.pxd  array.pyx  cy_animat_data.pxd  cy_animat_data.pyx  farms_sdf.py  link.py  model.py  model_options.py  model_options2.py  salamander.py  simon.py
farms_bullet/arenas/: __init__.py  arena.mtl  arena.py  arena_builder_v2.py  arena_ramp.mtl  arenas.py  create.py
farms_bullet/control/: kinematics.py
farms_bullet/controllers/: Params_walk.py  casadi.py  connect_test.py  control.py  control_options.py  controller.pxd  controller.pyx  convention.py  cy_controller.pxd  cy_controller_test.pyx  network.py
farms_bullet/data/: array.pxd  array.pyx  convention.pxd  data.py  data_cy.pxd  data_cy.pyx  sensor_convention.pxd  types.pxd
farms_bullet/evolution/: evolution.py
farms_bullet/experiments/: __init__.py  experiment.py  salamander.py  simon.py
farms_bullet/interface/: __init__.py  camera.py  debug.py  interface.py
farms_bullet/loggers/: __init__.py  logging.py
farms_mujoco/: __init__.py
salamander_benchmark/: CMakeLists.txt
salamander_control/: CMakeLists.txt
salamander_control/src/: control_plugin.cc
salamander_control2/: CMakeLists.txt
salamander_control2/src/: control_plugin.cc
salamander_description/: setup.py
salamander_evolution/: .directory  CMakeLists.txt  data_time_fit_rand.csv  evol_config.yaml  evolution_subroutine.py  install.sh  main_routine.py  migration_subroutine.py  results_subroutine.py  salamander.db  save_subroutine.py  setup.py  simulation_subroutine.py
salamander_evolution/salamander_evolution/: __init__.py  archipelago.py  benchmark_algorithms.py  data_time_fit_low_density.csv  data_time_fit_rand.csv  evolution.py  initialization_subroutine.py  migration.py  problems.py  results_subroutine.py  simulation_subroutine.py  test.py  test2.py  viewer.py
salamander_evolution/save_ADN/month_01/day_02/17h/topology_single/: seed_config.npz
salamander_evolution/save_ADN/month_01/day_02/20h/topology_single/: my_config.yaml  seed_config.npz
salamander_evolution/save_ADN/month_01/day_02/21h/topology_single/: seed_config.npz
salamander_evolution/save_ADN/month_01/day_03/00h/topology_single/: my_config.yaml  seed_config.npz
salamander_evolution/save_ADN/month_01/day_03/01h/topology_single/: my_config.yaml  seed_config.npz
salamander_evolution/save_ADN/month_01/day_04/20h/topology_single/: my_config.yaml
salamander_evolution/save_ADN/month_01/day_04/21h/topology_mixed/: my_config.yaml
salamander_evolution/save_ADN/month_01/day_04/21h/topology_single/: my_config.yaml  seed_config.npz
salamander_evolution/save_ADN/month_01/day_04/22h/topology_single/: generation_2.npz  my_config.yaml  seed_config.npz
salamander_evolution/save_ADN/month_12/day_30/19h/topology_mixed/: my_config.yaml
salamander_evolution/save_ADN/month_12/day_30/19h/topology_single/: my_config.yaml
salamander_evolution/save_ADN/month_12/day_30/20h/topology_single/: my_config.yaml
salamander_evolution/save_fitness/month_01/day_04/topology_22h/: generation_2.npz
salamander_evolution/scripts/: salamander_evolution_benchmark_2d.py  salamander_evolution_benchmark_migration.py  salamander_evolution_benchmark_sade.py  salamander_evolution_test_phase.py  salamander_test_evolution.py  salamander_test_parallel_evolution.py
salamander_evolution/src/: evolution.cc
salamander_experiments/: .directory
salamander_generation/: .directory  MANIFEST.in  setup.py
salamander_logging/: .directory  .gitignore  CMakeLists.txt
salamander_msgs/: .directory  CMakeLists.txt  gen.py  install.sh  setup.py
salamander_msgs/proto/: CMakeLists.txt  gen_gazebo_msgs.py  log_kinematics.proto  salamander_control.proto  salamander_joints.proto  salamander_kinematics.proto  salamander_links.proto
salamander_msgs/salamander_msgs/: __init__.py  log_kinematics_pb2.py  log_status_pb2.py  salamander_control_pb2.py  salamander_joints_pb2.py  salamander_kinematics_pb2.py  salamander_links_pb2.py  sonar_pb2.py
salamander_msgs/salamander_msgs_cpp/: log_kinematics.pb.cc  log_kinematics.pb.h  salamander_control.pb.cc  salamander_control.pb.h  salamander_joints.pb.cc  salamander_joints.pb.h  salamander_kinematics.pb.cc  salamander_kinematics.pb.h  salamander_links.pb.cc  salamander_links.pb.h
salamander_parameters/: CMakeLists.txt
salamander_parameters/src/: parameters.cc  parameters.hh
salamander_pybullet/: phase_diff.py  test.py
salamander_pyrun/: setup.py
salamander_results/: README.md  setup.py
salamander_sweep/: setup.py
salamander_viscous/: .directory  CMakeLists.txt
salamander_viscous/src/: viscous_swimming_plugin.cc
scripts/: blender_load_sph.py  farms_amphibious.py  farms_blaise.py  farms_centipede.py  farms_crescent_gunnel.py  farms_demo_salamander.py  farms_fish.py  farms_graph_salamander.py  farms_mo_jmetal.py  farms_mo_platypus.py  farms_mo_pygmo.py  farms_mo_salamander.py  farms_polypterus.py  farms_process.py  farms_quadruped.py  farms_salamander.py  farms_sim_salamander.py  farms_simon.py  farms_snake.py  farms_test_evolution.py  farms_test_integration.py  farms_test_mo_evolution.py  farms_test_network.py  farms_test_parameter_sweep.py  farms_view_mo_salamander.py  log_process.py  plot_swimming_results.py  run_movie.sh  run_sph.sh  run_view.sh  sph.py  sph_viewer.py
src/: controller.pyx  cy_animat_data.pyx  cy_controller.pyx  cy_controller_old.pyx
(+219 files in other folders)
